@@ -26,7 +26,7 @@
 #define MEGATEC_H
 
 
-#define DRV_VERSION "1.5.11"
+#define DRV_VERSION "1.5.12"
 
 
 #ifdef MEGATEC_SUBDRV
